--- a/pathfinder/package.json
+++ b/pathfinder/package.json
@@ -2,6 +2,10 @@
   "name": "pathfinder",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "3.5.2",
+    "node": "8.10.0"
+  },
   "dependencies": {
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
